--- a/1019_class.Rmd
+++ b/1019_class.Rmd
@@ -1,30 +1,31 @@
 ---
 title: "1019_class"
 author: "Wey"
-date: "10/26/2021"
+date: "10/25/2021"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r}
+name   <- c("subject_1", "subject_2", "subject_3","subject_4","subject_5")
+before_diet<- c(104, 95, 87, 77, 112)
+after_diet <- c(96, 91, 81, 75, 118)
+BUBBLE_DIET <- data.frame(name, before_diet, after_diet)
+BUBBLE_DIET
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+typeof(name)
+name.fact <- as.factor(name)
+name.fact
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+```{r}
+subject <- name.fact
+weight_loss <- (before_diet-after_diet)/before_diet*100
+C<- data.frame(subject, weight_loss)
+WEIGHT_LOSS<- list(subject, weight_loss , C)
+WEIGHT_LOSS
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
